Fixed various .html display issues
Fixed multiple layout issues on the pages.
Now the website use Bootstrap as it should and it respond correctly

--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -843,3 +843,4 @@ form.well {
   }
 
 }
+.logo { margin-bottom:15px; }
